cmake_minimum_required(VERSION 2.8)
PROJECT(nnsort)

FIND_PACKAGE(CUDA REQUIRED)
IF(NOT CUDA_FOUND)
    MESSAGE(STATUS "CUDA not found,Project will not be built")
ENDIF(NOT CUDA_FOUND)

INCLUDE_DIRECTORIES(include)
LINK_DIRECTORIES(/usr/lib
    /usr/local/lib)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_61,code=sm_61;)

AUX_SOURCE_DIRECTORY(src DIR_SRCS)

SET(NNS ${DIR_SRCS})


CUDA_ADD_EXECUTABLE(${PROJECT_NAME} ${NNS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} m)

